--- a/premium/erotic-blueprint_heatwave.html
+++ b/premium/erotic-blueprint_heatwave.html
@@ -1,1 +1,318 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Heatwave – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #10161f;
+      color: white;
+      font-family: 'Montserrat', sans-serif;
+      padding: 30px;
+      max-width: 900px;
+      margin: auto;
+      border: 5px solid #57b9ff;
+      box-shadow: 0 0 15px #57b9ff;
+    }
+    img {
+      max-width: 100%;
+      display: block;
+      margin: auto;
+    }
+    h1 {
+      font-size: 36px;
+      text-align: center;
+      margin-bottom: 10px;
+      color: #fff;
+      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
+    }
+    h2 {
+      font-size: 24px;
+      color: #f0c75e;
+      margin-top: 40px;
+      margin-bottom: 10px;
+    }
+    h3 {
+      font-size: 20px;
+      margin-top: 20px;
+      color: #57b9ff;
+    }
+    p, li {
+      font-size: 16px;
+      line-height: 1.6;
+    }
+    .quote {
+      font-style: italic;
+      color: #ccc;
+      text-align: center;
+      margin: 20px 0;
+    }
+    .image-container {
+      display: flex;
+      justify-content: center;
+      gap: 2px;
+      border: 4px solid #f0c75e;
+      padding: 4px;
+      margin: 30px 0;
+    }
+    .image-half {
+      flex: 1;
+    }
+    .image-half img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+    .logo {
+      max-width: 120px;
+      margin: 20px auto 10px;
+      display: block;
+    }
+  </style>
+</head>
+<body>
 
+  <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+  <h1>Heatwave</h1>
+  <p class="quote">“Maybe people think I look sexy because I feel sexy… If you’re comfortable with yourself, then it’s sexy.”<br>– Scarlett Johansson</p>
+  <div class="image-container">
+    <div class="image-half">
+      <img src="../images/heatwave_female.jpg" alt="Heatwave Female">
+    </div>
+    <div class="image-half">
+      <img src="../images/heatwave_male.jpg" alt="Heatwave Male">
+    </div>
+  </div>
+  <h2>Description</h2>
+  <p>You don’t just walk into a room, you tilt its emotional climate. You know what you want and how to get it, without ever needing to say it out loud. Psychology calls this “initiating desire” because you’re the one who ignites the spark. Whether you lead or tease, you’re always in tune with your own power.</p>
+
+  <h2>Power Dynamic Arc</h2>
+  <h3>Relationship Trajectory:</h3>
+  <p>Heatwaves are mood-based dominants. They do not seek control by default, but when arousal strikes, they take control. Their dominance is rooted in their own rhythm and inner fire. They can hold emotional intimacy, but only if their need to feel in charge of the atmosphere is respected.</p>
+
+  <h3>Polarity Shift Graph (Stock Chart Style):</h3>
+  <ul>
+    <li>• Heatwave initiates dominance from mood → 🔼 Surging spike</li>
+    <li>• Magnetic connection builds. Erotic tension ignites.</li>
+    <li>• Partner matches their rhythm → 🔥 Sustained burn</li>
+    <li>• Shared flow creates intimacy and intensity.</li>
+    <li>• Partner tries to dominate them → 🔽 Rapid drop</li>
+    <li>• Heatwave becomes emotionally detached. Mood dies.</li>
+    <li>• Heatwave asked to perform dominance without feeling → ⚠️ Flatline</li>
+    <li>• Results in mechanical sex or withdrawal.</li>
+    <li>• Partner tries to control the emotional vibe → 🚨 Crash</li>
+    <li>• Heatwave disappears. They need to lead the tempo or they’re gone.</li>
+  </ul>
+
+  <h3>Ideal Dynamic:</h3>
+  <p>They thrive with receptive partners who let them steer the mood once the fire catches. Their relationships work best when their internal signal is trusted and space is made for their natural shifts from laid-back to commanding.</p>
+
+  <h2>Origins of Desire</h2>
+  <p>Heatwaves are turned on by rhythm, pacing, internal intensity, and the moment when they know they’re driving someone wild. Their arousal emerges from within, they act on desire the second it rises.</p>
+
+  <h3>Theoretical Explanations:</h3>
+  <ul>
+    <li>• Imprintation Theory: Their early erotic memories likely involved being the one who unexpectedly took charge and got a powerful response. This created a lifelong link between mood, arousal, and control.</li>
+    <li>• Self-Esteem Theory: They associate desirability with their ability to stir desire. The more power they feel over the vibe, the more turned on they become.</li>
+    <li>• Evolutionary Biological Theory: Heatwaves are wired to lead when the conditions are right. Their dominance signals attraction, strength, and sexual timing, qualities that boost reproductive fitness.</li>
+    <li>• Psychological Rough-Housing Theory: They play with dominance not to overpower, but to test timing, confidence, and tension. Their desire is exploratory, not forceful.</li>
+    <li>• Blank Slate Theory: Many Heatwaves were socialized to be chill or emotionally neutral, now they reclaim erotic heat by setting the temperature themselves.</li>
+  </ul>
+
+  <h2>Turn-On Vocabulary</h2>
+  <p>These phrases spark their fire:</p>
+  <ul>
+    <li>• “You’re in control now.”</li>
+    <li>• “I love it when you take charge.”</li>
+    <li>• “You really know how to build the mood.”</li>
+    <li>• “I’m not going anywhere.”</li>
+    <li>• “You’re so fucking confident when you want something.”</li>
+    <li>• “Tell me what to do next.”</li>
+    <li>• “You just flipped a switch, didn’t you?”</li>
+    <li>• “That look in your eyes… do it again.”</li>
+    <li>• “I didn’t know you could be like this.”</li>
+    <li>• “Keep going. Don’t stop.”</li>
+  </ul>
+
+    <h2>Conflict Pattern</h2>
+
+  <p><strong>Tendencies During Conflict:</strong></p>
+  <ul>
+    <li>• Avoids emotional conversations if they feel too slow or heavy</li>
+    <li>• Can become cool or passive-aggressive when misunderstood</li>
+    <li>• Uses mood to distance instead of directly expressing frustration</li>
+    <li>• Withholds erotic attention as a way to protect space</li>
+  </ul>
+
+  <p><strong>Triggers:</strong></p>
+  <ul>
+    <li>• Being forced into emotional disclosure when not ready</li>
+    <li>• Partner demanding intimacy without warming up the vibe</li>
+    <li>• Criticism of their mood shifts or emotional pacing</li>
+    <li>• Feeling rushed, cornered, or expected to always lead</li>
+  </ul>
+
+  <p><strong>Resolution Style:</strong></p>
+  <ul>
+    <li>• Needs a reset, time and space to reignite desire and clarity</li>
+    <li>• Responds well to “I miss our rhythm” instead of “You shut down”</li>
+    <li>• Best approached through tone and energy, not logic or pressure</li>
+    <li>• Regains intimacy when invited back without demand</li>
+  </ul>
+
+  <p><strong>Growth Edge:</strong></p>
+  <ul>
+    <li>• Learning to name feelings instead of just shifting mood</li>
+    <li>• Building emotional consistency without losing erotic spontaneity</li>
+  </ul>
+
+  <h2>Erotic Edge &amp; Drop</h2>
+  <p><strong>Erotic Edge:</strong> Heatwaves turn sex into seduction. They control tempo, atmosphere, and energy like seasoned DJs, always waiting for the right moment to drop the beat. Their lovers crave how they turn nothing into tension, how they make the air crackle. Their presence alone can bring someone to the edge.</p>
+
+  <p><strong>Erotic Drop (Dealbreaker):</strong> Being told to “hurry up” or “just dominate already.” Nothing kills their vibe faster than being expected to perform without the inner spark. They need to feel it, not be told to fake it.</p>
+
+  <h2>Erotic Short Story</h2>
+
+  <p>You’ve been thinking about this before the sun came up.</p>
+
+  <p>You’re not sure why, you just woke up today and had this burning desire. This impulse that you can’t hide, that you can’t suppress. The kind of arousal that simmers underneath everything, so persistent it starts to color the way you look at them. The way you move. The way you breathe.</p>
+
+  <p>Maybe it started in a dream you can’t remember. Maybe it was just something in the way your body felt when you first opened your eyes. Or maybe it’s been subconsciously building over time until you feel it begin to boil and reach its edge.</p>
+
+  <p>Either way, when you walk downstairs and see them standing in the kitchen, barefoot and making your coffee just the way you like it, you know.</p>
+
+  <p>It’s time.</p>
+
+  <p>They glance up and smile. That kind of morning smile that’s soft and full of routine, like this is just another day. But it’s not. Not for you. Something inside you feels too full. Like if you don’t act on it, it might spill over anyway. And you’d rather take control of it. Shape it.</p>
+
+  <p>You step closer and don’t say anything right away. Just watch them as they finish pouring. They notice the way your eyes settle on them and blink, curious.</p>
+
+  <p>“You good?” they ask, casual.</p>
+
+  <p>“Yeah,” you answer. “Just… in an interesting mood.”</p>
+
+  <p>“Oh, really?”</p>
+
+  <p>You can tell that you’ve already piqued their interest. You can spot the subtle changes in their posture. How they start readjusting themselves, and begin shifting the direction of their body towards you so they’re a little more exposed.</p>
+
+  <p>You’ve already shifted their energy. You can see it in the way their spine straightens. The way their jaw relaxes while everything else gets a little tighter. More focused.</p>
+
+  <p>You pick up on it instantly. Your mood has set the tone. They’re already mirroring you, alert and eager to see where you’re about to take them.</p>
+
+  <p>Their lips part slightly. Their posture changes, just barely, like they can feel something coming.</p>
+
+  <p>You move behind them, wrap your arms around their waist. Their body melts into yours with ease. They’re always good like that. Receptive. But today, that’s not enough.</p>
+
+  <p>Today, you want to lead. You want to take control, not to prove that you can but because you’re driven by what’s pulsing inside you right now.</p>
+
+  <p>They tilt their head back against your shoulder, and you press your mouth to their neck. Not gently. Not harshly either. But deliberately. You taste their skin and breathe them in, grounding yourself for what you’re about to do.</p>
+
+  <p>“I’ve been trying to hold this feeling back,” you whisper in their ear. “But I have a feeling you’d rather I just show you what I want to do to you.”</p>
+
+  <p>Their breath stutters. You feel it under your palm. Your fingers slide lower, teasing along their waistband.</p>
+
+  <p>“Am I wrong?”</p>
+
+  <p>They shake their head. A little breathless. “No. You’re not wrong. Tell me.”</p>
+
+  <p>You smile against their skin and pull them tighter against you.</p>
+
+  <p>“I’d rather show you.”</p>
+
+  <p>You spin them slowly, carefully, until their back is against the counter. Their eyes meet yours. Wide, but not afraid. Curious. Turned on. A little in awe. You know that look. It always sends a thrill down your spine.</p>
+
+  <p>You run your hand along their chest, then down their side, taking your time.</p>
+
+  <p>“Don’t move, you’ll get more enjoyment out of this if you listen” you say. Not a command. A promise.</p>
+
+  <p>They nod once.</p>
+
+  <p>You kneel in front of them. Your fingers hook into their waistband, tugging gently.</p>
+
+  <p>“I want to taste you right here. In the kitchen. Right now.”</p>
+
+  <p>Their eyes flutter, lips part. You don’t wait for them to say yes. You already know they will. The tension’s too thick. The need is already there. Yours and theirs. Syncing.</p>
+
+  <p>You undress them slowly. With intent. You kiss the inside of their thigh. Breathe warm air against sensitive skin. They shiver. Their hands tighten in your hair as you part their legs and finally start to give them what they need.</p>
+
+  <p>But you take your time.</p>
+
+  <p>This isn’t about hunger. This is about pacing. This is about making sure every inch of them knows they’re wanted.</p>
+
+  <p>They moan softly. Their fingers curl around the edge of the counter. You keep your eyes on their face. You want to see the moment they break.</p>
+
+  <p>Their body starts to tremble. You don’t stop. You just slow down and savor it. You love the way they fall apart when they least expect it. You love that you can push them over the edge with your mouth, your hands, your presence.</p>
+
+  <p>When they come, it’s a full-body quake. A sharp inhale and a soft, desperate sound. You stay there for a moment, letting the aftershocks pass before you rise to your feet.</p>
+
+  <p>Their eyes are glassy. Their lips swollen. You kiss them hard. Deep. Letting them taste themselves on your tongue.</p>
+
+  <p>“I’m not done with you,” you whisper.</p>
+
+  <p>You lead them to the living room. Not the bedroom. The coffee table catches your eye. It’s not where you normally do this. But today isn’t normal.</p>
+
+  <p>You push a few books aside. Run your hand across the surface. Solid enough.</p>
+
+  <p>“Sit right here for me,” you say.</p>
+
+  <p>They hesitate for a second, blinking.</p>
+
+  <p>“You want me to?”</p>
+
+  <p>You give them a look. Heat in your eyes. “I want to see how sturdy this thing really is.”</p>
+
+  <p>They laugh, breathy. “You’re serious.”</p>
+
+  <p>“You’ll like it, you trust me.”</p>
+
+  <p>They sit, answering you with their actions.</p>
+
+  <p>You straddle their lap, guiding their hands to your hips. You kiss them again, this time slower. Not teasing. Not rough. Just steady. Deep. Full.</p>
+
+  <p>You grind your hips down. Their breath catches. Their hands dig into your waist. You press your forehead to theirs and whisper, “You like watching me take control, don’t you?”</p>
+
+  <p>They swallow. “Maybe a little.”</p>
+
+  <p>That’s all you need.</p>
+
+  <p>You start to move. Rhythm first. Then pressure. You find your pace and ride it, building tension with every shift. Their hands grip you tighter. You murmur praise into their mouth. Their neck. Their shoulder.</p>
+
+  <p>You tell them how good they feel.</p>
+
+  <p>How you’ve been aching for this.</p>
+
+  <p>How right it feels to take what you want with someone who wants it just as badly.</p>
+
+  <p>They’re close again. You can tell. You’re close too. You lean in and bite their lip gently, then kiss it better.</p>
+
+  <p>“You’re going to come with me,” you say firmly.</p>
+
+  <p>They nod, eyes wide.</p>
+
+  <p>You ride the edge together, hips grinding, breath tangled, bodies slick with sweat. You bring them there. And they bring you too.</p>
+
+  <p>You come at the same time. Hard. Full-body. Deep.</p>
+
+  <p>You stay there, chests pressed together, breath syncing back into something human.</p>
+
+  <p>Later, when you’re both lying on the couch, half dressed and completely wrecked, they laugh softly.</p>
+
+  <p>“What?” you ask.</p>
+
+  <p>They glance toward the table.</p>
+
+  <p>“Turns out this thing’s sturdier than it looks.”</p>
+
+  <p>You laugh together. “I told you you’d enjoy it.”</p>
+
+  <p>You don’t say anything else. You don’t need to.</p>
+
+  <p>You feel lighter now. Like something inside you found its release. You gave what needed to be given. Tomorrow? You’ll follow the pull again.</p>
+
+  <p>Because with you, desire doesn’t follow a pattern.</p>
+
+  <p>It follows your pulse.</p>
+</div>
+</body>
+</html>
