--- a/premium/erotic-blueprint_heatwave.html
+++ b/premium/erotic-blueprint_heatwave.html
@@ -2,112 +2,157 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Heatwave – Erotic Blueprint</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Mood Multiplier – Erotic Blueprint</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"/>
+
   <style>
+    :root {
+      --blue: #064D95;
+      --gold: #e1bf78;
+      --offWhite: #e6e6e6;
+    }
+
+    * { box-sizing: border-box; }
+    html, body { margin: 0; padding: 0; }
     body {
-      background-color: #10161f;
-      color: white;
+      background-color: var(--blue);
+      color: var(--offWhite);
       font-family: 'Montserrat', sans-serif;
-      padding: 30px;
-      max-width: 900px;
-      margin: auto;
-      border: 5px solid #57b9ff;
-      box-shadow: 0 0 15px #57b9ff;
+      line-height: 1.55;
+      border: 5px solid var(--gold);
+      box-shadow: 0 0 10px var(--gold);
     }
-    img {
-      max-width: 100%;
+
+    .wrapper {
+      padding: 3rem 1.1rem 3rem;
+    }
+
+    .logo {
       display: block;
-      margin: auto;
+      max-width: 120px;
+      margin: 0 auto 1.3rem;
     }
+
     h1 {
-      font-size: 36px;
+      font-size: 2.7rem;
+      font-weight: 700;
+      font-style: italic;
       text-align: center;
-      margin-bottom: 10px;
       color: #fff;
       text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
+      margin: 0.2rem 0 0.8rem;
     }
+
     h2 {
-      font-size: 24px;
-      color: #f0c75e;
-      margin-top: 40px;
-      margin-bottom: 10px;
-    }
-    h3 {
-      font-size: 20px;
-      margin-top: 20px;
-      color: #57b9ff;
-    }
-    p, li {
-      font-size: 16px;
-      line-height: 1.6;
-    }
-    .quote {
+      font-size: 1.6rem;
       font-style: italic;
-      color: #ccc;
-      text-align: center;
-      margin: 20px 0;
+      color: var(--gold);
+      margin: 2.4rem 0 0.6rem;
     }
+
+    .slogan, .quote {
+      font-style: italic;
+      text-align: center;
+      color: #d2d2d2;
+      margin: 0.2rem 0 1.6rem;
+    }
+
+    .quote {
+      margin-top: -0.4rem;
+    }
+
     .image-container {
+      border: 4px solid var(--gold);
+      border-radius: 12px;
+      overflow: hidden;
       display: flex;
       justify-content: center;
-      gap: 2px;
-      border: 4px solid #f0c75e;
-      padding: 4px;
-      margin: 30px 0;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 2.2rem;
+      box-shadow: 0 0 7px var(--gold);
     }
+
     .image-half {
       flex: 1;
     }
+
     .image-half img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
-    .logo {
-      max-width: 120px;
-      margin: 20px auto 10px;
       display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
+    }
+
+    .divider {
+      width: 4px;
+      background-color: var(--gold);
+    }
+
+    ul {
+      padding-left: 1.25rem;
+      margin: 0.6rem 0;
+    }
+
+    li {
+      margin-bottom: 0.45rem;
+    }
+
+    .sub {
+  margin-left: 1.4rem;
+  font-style: italic;
+  color: #c7c7c7;
+  list-style: none;
+  padding-left: 1rem;
+}
+
+    .story p {
+      margin: 0 0 1.1rem;
     }
   </style>
 </head>
 <body>
+  <div class="wrapper">
+    <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+    <h1><strong><em>Mood Multiplier</em></strong></h1>
+    <p class="slogan">You match their vibe and raise it.</p>
+    <p class="quote">“I don’t adapt to people. I evolve with them.” – Anonymous</p>
 
-  <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
-  <h1>Heatwave</h1>
-  <p class="quote">“Maybe people think I look sexy because I feel sexy… If you’re comfortable with yourself, then it’s sexy.”<br>– Scarlett Johansson</p>
-  <div class="image-container">
-    <div class="image-half">
-      <img src="../images/heatwave_female.jpg" alt="Heatwave Female">
+    <div class="image-container">
+      <div class="image-half"><img src="/images/mood_multiplier_female.jpg" alt="Mood Multiplier Female" /></div>
+      <div class="divider"></div>
+      <div class="image-half"><img src="/images/mood_multiplier_male.jpg" alt="Mood Multiplier Male" /></div>
     </div>
-    <div class="image-half">
-      <img src="../images/heatwave_male.jpg" alt="Heatwave Male">
-    </div>
+
+  <div class="content-section">
+    <h2>Description</h2>
+    <p>You don’t lead or follow, you co-create. Your sexual style is responsive, intuitive, and emotionally intelligent. Like a mirror that amplifies light, you reflect and enhance what others bring. This is a classic example of responsive desire, you don’t act until you feel something real. And when you do, you bring it hard.</p>
   </div>
-  <h2>Description</h2>
-  <p>You don’t just walk into a room, you tilt its emotional climate. You know what you want and how to get it, without ever needing to say it out loud. Psychology calls this “initiating desire” because you’re the one who ignites the spark. Whether you lead or tease, you’re always in tune with your own power.</p>
 
-  <h2>Power Dynamic Arc</h2>
-  <h3>Relationship Trajectory:</h3>
-  <p>Heatwaves are mood-based dominants. They do not seek control by default, but when arousal strikes, they take control. Their dominance is rooted in their own rhythm and inner fire. They can hold emotional intimacy, but only if their need to feel in charge of the atmosphere is respected.</p>
-
-  <h3>Polarity Shift Graph (Stock Chart Style):</h3>
-  <ul>
-    <li>• Heatwave initiates dominance from mood → 🔼 Surging spike</li>
-    <li>• Magnetic connection builds. Erotic tension ignites.</li>
-    <li>• Partner matches their rhythm → 🔥 Sustained burn</li>
-    <li>• Shared flow creates intimacy and intensity.</li>
-    <li>• Partner tries to dominate them → 🔽 Rapid drop</li>
-    <li>• Heatwave becomes emotionally detached. Mood dies.</li>
-    <li>• Heatwave asked to perform dominance without feeling → ⚠️ Flatline</li>
-    <li>• Results in mechanical sex or withdrawal.</li>
-    <li>• Partner tries to control the emotional vibe → 🚨 Crash</li>
-    <li>• Heatwave disappears. They need to lead the tempo or they’re gone.</li>
-  </ul>
-
-  <h3>Ideal Dynamic:</h3>
-  <p>They thrive with receptive partners who let them steer the mood once the fire catches. Their relationships work best when their internal signal is trusted and space is made for their natural shifts from laid-back to commanding.</p>
-
+      <div class="content-section">
+      <h2>Power Dynamic Arc</h2>
+      <p><strong>Relationship Trajectory:</strong> Heatwaves are mood-based switches that lean dominant. They do not seek control by default, but when arousal strikes, they take control. Their dominance is rooted in their own rhythm and inner fire. They can hold emotional intimacy, but only if their need to feel in charge of the atmosphere is respected.
+</p>
+      <ul>
+        <li>Heatwave initiates dominance from mood → 📈 Surging spike</li>
+        <li class="sub">Magnetic connection builds. Erotic tension ignites.</li>
+        <li>Partner matches their rhythm → 🔥 Sustained burn</li>
+        <li class="sub">Shared flow creates intimacy and intensity.</li>
+        <li>Partner tries to dominate them → 📉 Rapid drop</li>
+        <li class="sub">Heatwave becomes emotionally detached. Mood dies.</li>
+        <li>Heatwave asked to perform dominance without feeling → ⚠️ Flatline</li>
+        <li class="sub">Results in mechanical sex or withdrawal.</li>
+        <li>Partner tries to control the emotional vibe → 🚨 Crash</li>
+        <li class="sub">Heatwave disappears. They need to lead the tempo or they’re gone.</li>
+      </ul>
+      <p><strong>Ideal Dynamic:</strong> They thrive with receptive partners who let them steer the mood once the fire catches. Their relationships work best when their internal signal is trusted and space is made for their natural shifts from laid-back to commanding.</p>
+  </div>
   <h2>Origins of Desire</h2>
   <p>Heatwaves are turned on by rhythm, pacing, internal intensity, and the moment when they know they’re driving someone wild. Their arousal emerges from within, they act on desire the second it rises.</p>
 
