--- a/premium/erotic-blueprint_heatwave.html
+++ b/premium/erotic-blueprint_heatwave.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Mood Multiplier – Erotic Blueprint</title>
+  <title>Heatwave – Erotic Blueprint</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"/>
@@ -120,14 +120,14 @@
 <body>
   <div class="wrapper">
     <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
-    <h1><strong><em>Mood Multiplier</em></strong></h1>
-    <p class="slogan">You match their vibe and raise it.</p>
-    <p class="quote">“I don’t adapt to people. I evolve with them.” – Anonymous</p>
+    <h1><strong><em>Heatwave</em></strong></h1>
+    <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
+    <p class="quote">“Maybe people think I look sexy because I feel sexy… If you’re comfortable with yourself, then it’s sexy.” - Scarlett Johansson</p>
 
     <div class="image-container">
-      <div class="image-half"><img src="/images/mood_multiplier_female.jpg" alt="Mood Multiplier Female" /></div>
+      <div class="image-half"><img src="/images/heatwave_female.jpg" alt="Heatwave Female" /></div>
       <div class="divider"></div>
-      <div class="image-half"><img src="/images/mood_multiplier_male.jpg" alt="Mood Multiplier Male" /></div>
+      <div class="image-half"><img src="/images/heatwave_male.jpg" alt="Heatwave Male" /></div>
     </div>
 
   <div class="content-section">
