--- a/premium/erotic-blueprint_heatwave.html
+++ b/premium/erotic-blueprint_heatwave.html
@@ -158,58 +158,58 @@
 
   <h3>Theoretical Explanations:</h3>
   <ul>
-    <li>• Imprintation Theory: Their early erotic memories likely involved being the one who unexpectedly took charge and got a powerful response. This created a lifelong link between mood, arousal, and control.</li>
-    <li>• Self-Esteem Theory: They associate desirability with their ability to stir desire. The more power they feel over the vibe, the more turned on they become.</li>
-    <li>• Evolutionary Biological Theory: Heatwaves are wired to lead when the conditions are right. Their dominance signals attraction, strength, and sexual timing, qualities that boost reproductive fitness.</li>
-    <li>• Psychological Rough-Housing Theory: They play with dominance not to overpower, but to test timing, confidence, and tension. Their desire is exploratory, not forceful.</li>
-    <li>• Blank Slate Theory: Many Heatwaves were socialized to be chill or emotionally neutral, now they reclaim erotic heat by setting the temperature themselves.</li>
+    <li>Imprintation Theory: Their early erotic memories likely involved being the one who unexpectedly took charge and got a powerful response. This created a lifelong link between mood, arousal, and control.</li>
+    <li>Self-Esteem Theory: They associate desirability with their ability to stir desire. The more power they feel over the vibe, the more turned on they become.</li>
+    <li>Evolutionary Biological Theory: Heatwaves are wired to lead when the conditions are right. Their dominance signals attraction, strength, and sexual timing, qualities that boost reproductive fitness.</li>
+    <li>Psychological Rough-Housing Theory: They play with dominance not to overpower, but to test timing, confidence, and tension. Their desire is exploratory, not forceful.</li>
+    <li>Blank Slate Theory: Many Heatwaves were socialized to be chill or emotionally neutral, now they reclaim erotic heat by setting the temperature themselves.</li>
   </ul>
 
   <h2>Turn-On Vocabulary</h2>
   <p>These phrases spark their fire:</p>
   <ul>
-    <li>• “You’re in control now.”</li>
-    <li>• “I love it when you take charge.”</li>
-    <li>• “You really know how to build the mood.”</li>
-    <li>• “I’m not going anywhere.”</li>
-    <li>• “You’re so fucking confident when you want something.”</li>
-    <li>• “Tell me what to do next.”</li>
-    <li>• “You just flipped a switch, didn’t you?”</li>
-    <li>• “That look in your eyes… do it again.”</li>
-    <li>• “I didn’t know you could be like this.”</li>
-    <li>• “Keep going. Don’t stop.”</li>
+    <li>“You’re in control now.”</li>
+    <li>“I love it when you take charge.”</li>
+    <li>“You really know how to build the mood.”</li>
+    <li>“I’m not going anywhere.”</li>
+    <li>“You’re so fucking confident when you want something.”</li>
+    <li>“Tell me what to do next.”</li>
+    <li>“You just flipped a switch, didn’t you?”</li>
+    <li>“That look in your eyes… do it again.”</li>
+    <li>“I didn’t know you could be like this.”</li>
+    <li>“Keep going. Don’t stop.”</li>
   </ul>
 
     <h2>Conflict Pattern</h2>
 
   <p><strong>Tendencies During Conflict:</strong></p>
   <ul>
-    <li>• Avoids emotional conversations if they feel too slow or heavy</li>
-    <li>• Can become cool or passive-aggressive when misunderstood</li>
-    <li>• Uses mood to distance instead of directly expressing frustration</li>
-    <li>• Withholds erotic attention as a way to protect space</li>
+    <li>Avoids emotional conversations if they feel too slow or heavy</li>
+    <li>Can become cool or passive-aggressive when misunderstood</li>
+    <li>Uses mood to distance instead of directly expressing frustration</li>
+    <li>Withholds erotic attention as a way to protect space</li>
   </ul>
 
   <p><strong>Triggers:</strong></p>
   <ul>
-    <li>• Being forced into emotional disclosure when not ready</li>
-    <li>• Partner demanding intimacy without warming up the vibe</li>
-    <li>• Criticism of their mood shifts or emotional pacing</li>
-    <li>• Feeling rushed, cornered, or expected to always lead</li>
+    <li>Being forced into emotional disclosure when not ready</li>
+    <li>Partner demanding intimacy without warming up the vibe</li>
+    <li>Criticism of their mood shifts or emotional pacing</li>
+    <li>Feeling rushed, cornered, or expected to always lead</li>
   </ul>
 
   <p><strong>Resolution Style:</strong></p>
   <ul>
-    <li>• Needs a reset, time and space to reignite desire and clarity</li>
-    <li>• Responds well to “I miss our rhythm” instead of “You shut down”</li>
-    <li>• Best approached through tone and energy, not logic or pressure</li>
-    <li>• Regains intimacy when invited back without demand</li>
+    <li>Needs a reset, time and space to reignite desire and clarity</li>
+    <li>Responds well to “I miss our rhythm” instead of “You shut down”</li>
+    <li>Best approached through tone and energy, not logic or pressure</li>
+    <li>Regains intimacy when invited back without demand</li>
   </ul>
 
   <p><strong>Growth Edge:</strong></p>
   <ul>
-    <li>• Learning to name feelings instead of just shifting mood</li>
-    <li>• Building emotional consistency without losing erotic spontaneity</li>
+    <li>Learning to name feelings instead of just shifting mood</li>
+    <li>Building emotional consistency without losing erotic spontaneity</li>
   </ul>
 
   <h2>Erotic Edge &amp; Drop</h2>
